--- a/podcastr/src/components/Player/styles.module.scss
+++ b/podcastr/src/components/Player/styles.module.scss
@@ -116,8 +116,8 @@
       filter: brightness(0.7);
     }
 
-    &.isActive {
-      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg)
+    &.isActive { //alterando a cor do loop
+      filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
     }
 
     &.isActive:hover {
